--- a/MoviePinsoft/Storyboard/Base.lproj/Main.storyboard
+++ b/MoviePinsoft/Storyboard/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Master View Controller-->
+        <!--HOME-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="MasterViewController" id="BYZ-38-t0r" customClass="MasterViewController" customModule="MoviePinsoft" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MasterViewController" title="HOME" id="BYZ-38-t0r" customClass="MasterViewController" customModule="MoviePinsoft" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -72,12 +72,12 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Z9-KF-yIh">
                                 <rect key="frame" x="207" y="448" width="0.0" height="0.0"/>
-                                <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="36"/>
+                                <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="40"/>
                                 <color key="textColor" red="0.0" green="0.037254009871842207" blue="0.72793067893401009" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.87291798857868019" green="0.87291798857868019" blue="0.87291798857868019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="7Z9-KF-yIh" firstAttribute="centerY" secondItem="Q8Z-yu-D1V" secondAttribute="centerY" id="Q28-Sn-YTr"/>
                             <constraint firstItem="7Z9-KF-yIh" firstAttribute="centerX" secondItem="Q8Z-yu-D1V" secondAttribute="centerX" id="njU-YO-C5e"/>
@@ -116,7 +116,7 @@
         <!--Detail View Controller-->
         <scene sceneID="l3P-4I-gc0">
             <objects>
-                <viewController storyboardIdentifier="DetailVC" id="FMx-D6-N76" customClass="DetailViewController" customModule="MovieLoodos" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailVC" id="FMx-D6-N76" customClass="DetailViewController" customModule="MoviePinsoft" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="x26-CR-KPe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -135,24 +135,18 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iC2-Hv-4CI">
-                                <rect key="frame" x="173" y="123" width="225" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="YHb-jh-MT1"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <rect key="frame" x="173" y="188" width="225" height="0.0"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yM4-FN-Ryv">
-                                <rect key="frame" x="173" y="173" width="215" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="BfC-kT-whb"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yM4-FN-Ryv">
+                                <rect key="frame" x="173" y="194" width="215" height="0.0"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pMA-1S-r9f" customClass="ProgressBar" customModule="MovieLoodos" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pMA-1S-r9f" customClass="ProgressBar" customModule="MoviePinsoft" customModuleProvider="target">
                                 <rect key="frame" x="172" y="215" width="56" height="56"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
@@ -177,11 +171,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vpk-w7-5wB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vpk-w7-5wB">
                                 <rect key="frame" x="0.0" y="306" width="414" height="556"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="MdT-5s-7Pl" customClass="DetailTableViewCell" customModule="MovieLoodos" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="MdT-5s-7Pl" customClass="DetailTableViewCell" customModule="MoviePinsoft" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MdT-5s-7Pl" id="RdU-hJ-YZU">
@@ -211,16 +205,16 @@
                             <constraint firstItem="Vpk-w7-5wB" firstAttribute="top" secondItem="iT1-GQ-epO" secondAttribute="bottom" constant="20" id="Zfk-P5-dSt"/>
                             <constraint firstItem="JvB-sN-JX7" firstAttribute="trailing" secondItem="Vpk-w7-5wB" secondAttribute="trailing" id="acf-y4-MuL"/>
                             <constraint firstItem="Fgf-K0-Dmu" firstAttribute="leading" secondItem="JvB-sN-JX7" secondAttribute="leading" id="b3m-DH-lgZ"/>
+                            <constraint firstItem="yM4-FN-Ryv" firstAttribute="bottom" secondItem="Fgf-K0-Dmu" secondAttribute="bottom" constant="-6" id="drO-1L-2Ec"/>
                             <constraint firstItem="JvB-sN-JX7" firstAttribute="trailing" secondItem="Hyt-0F-dkS" secondAttribute="trailing" constant="16" id="gU0-YI-83a"/>
                             <constraint firstItem="iT1-GQ-epO" firstAttribute="top" secondItem="Fgf-K0-Dmu" secondAttribute="bottom" constant="-87" id="h2S-wS-3j8"/>
-                            <constraint firstItem="yM4-FN-Ryv" firstAttribute="top" secondItem="iC2-Hv-4CI" secondAttribute="bottom" id="n0J-Dh-dHC"/>
+                            <constraint firstItem="yM4-FN-Ryv" firstAttribute="top" secondItem="iC2-Hv-4CI" secondAttribute="bottom" constant="6" id="n0J-Dh-dHC"/>
                             <constraint firstItem="Hyt-0F-dkS" firstAttribute="top" secondItem="pMA-1S-r9f" secondAttribute="top" id="nJ2-AL-x6Q"/>
                             <constraint firstItem="pMA-1S-r9f" firstAttribute="top" secondItem="Fgf-K0-Dmu" secondAttribute="bottom" constant="15" id="pPd-Sa-nxC"/>
                             <constraint firstItem="Fgf-K0-Dmu" firstAttribute="trailing" secondItem="JvB-sN-JX7" secondAttribute="trailing" id="qwr-jh-Ogx"/>
                             <constraint firstItem="Fgf-K0-Dmu" firstAttribute="top" secondItem="x26-CR-KPe" secondAttribute="top" id="r7X-Rf-K6t"/>
                             <constraint firstItem="pMA-1S-r9f" firstAttribute="bottom" secondItem="iT1-GQ-epO" secondAttribute="bottom" constant="-15" id="rUd-Nk-n2o"/>
                             <constraint firstItem="JvB-sN-JX7" firstAttribute="bottom" secondItem="Vpk-w7-5wB" secondAttribute="bottom" id="s97-wN-sEU"/>
-                            <constraint firstItem="iC2-Hv-4CI" firstAttribute="top" secondItem="iT1-GQ-epO" secondAttribute="top" constant="10" id="xKQ-WD-03B"/>
                             <constraint firstItem="pMA-1S-r9f" firstAttribute="leading" secondItem="iT1-GQ-epO" secondAttribute="trailing" constant="15" id="zws-ic-hdf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JvB-sN-JX7"/>
